update project p1