@@ -1,14 +1,12 @@
 package net.onedaybeard.constexpr.visitor;
 
 import net.onedaybeard.constexpr.InvalidConstExprException;
-import net.onedaybeard.constexpr.TestUtil;
 import net.onedaybeard.constexpr.model.*;
 import net.onedaybeard.constexpr.inspect.ClassMetadata;
 import net.onedaybeard.constexpr.inspect.FieldDescriptor;
 import org.junit.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static net.onedaybeard.constexpr.TestUtil.scan;
 import static org.junit.Assert.*;
@@ -21,7 +19,7 @@ public class ConstExprScannerTest {
 
 		List<FieldDescriptor> constExprFields = scan.fields.stream()
 			.filter(fd -> fd.isConstExpr)
-			.collect(Collectors.toList());
+			.toList();
 		assertEquals(2, constExprFields.size());
 		assertEquals("timestamp", constExprFields.get(0).name);
 		assertEquals(1, scan.methods.stream()
